agregué input-search

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <figure>
                 <img src="img/google-logo.png" alt="">
             </figure>
-            <div class="searcher">
+            <div class="input-search">
                 <span class="search-icon"></span>
                 <input type="text">
                 <button><span class="mic-icon"></span></button>
                 <button><span class="cam-icon"></span></button>
             </div>
-            <div class="searcher-buttons">
-                <button>Buscar con Google</button>
-                <button>Voy a tener suerte</button>
+            <div class="btn-search">
+                <a href="#">Buscar con Google</a>
+                <a href="https://doodles.google/">Voy a tener suerte</a>
             </div>
         </div>
     </main>
